angular material successfully installed

--- a/src/app/Components/left-side-bar/left-side-bar.component.html
+++ b/src/app/Components/left-side-bar/left-side-bar.component.html
@@ -1,1 +1,7 @@
-<p>left-side-bar works!</p>
+<div class="sidenav">
+  <div class="logo-container">
+    <button class="logo">
+      <i class="fal fa-bars"></i>
+    </button>
+  </div>
+</div>
