--- a/src/app/Components/left-side-bar/left-side-bar.component.html
+++ b/src/app/Components/left-side-bar/left-side-bar.component.html
@@ -1,7 +1,11 @@
 <div class="sidenav">
   <div class="logo-container">
     <button class="logo">
-      <i class="fal fa-bars"></i>
+      <mat-icon >view_headline</mat-icon>
     </button>
   </div>
+  <div class="logo-text">App</div>
+  <button class="btn-close">
+    <mat-icon>home</mat-icon>
+  </button>
 </div>
