--- a/src/app/Components/main-body/main-body.component.html
+++ b/src/app/Components/main-body/main-body.component.html
@@ -1,2 +1,4 @@
-<p>main-body works!</p>
-<mat-slide-toggle>Click to toggle</mat-slide-toggle>
+<div class="body body-trimmed ">
+  <router-outlet></router-outlet>
+  
+</div>
