--- a/src/app/Components/left-side-bar/left-side-bar.component.scss
+++ b/src/app/Components/left-side-bar/left-side-bar.component.scss
@@ -86,7 +86,7 @@
   width: 2rem;
   min-width: 2rem;
   text-align: center;
-  padding: 12px;
+  padding-left: 12px;
 }
 
 .sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-text {
