--- a/src/app/Components/left-side-bar/left-side-bar.component.html
+++ b/src/app/Components/left-side-bar/left-side-bar.component.html
@@ -1,19 +1,24 @@
-<div class="sidenav">
+<div class="sidenav" [ngClass]="isLeftSideCollapsed()?'sidenav-collapsed':''">
   <div class="logo-container">
-    <button class="logo">
+    <button class="logo" (click)="openMenu()">
       <mat-icon >view_headline</mat-icon>
     </button>
-    <div class="logo-text">App</div>
-    <button class="btn-close">
-      <mat-icon>close</mat-icon>
-    </button>
+    @if (!isLeftSideCollapsed()) {
+      <div class="logo-text">App</div>
+      <button class="btn-close" (click)="openMenu()" >
+        <mat-icon>close</mat-icon>
+      </button>
+    }
   </div>
   <div class="sidenav-nav">
     @for (item of menuItems; track $index) {
       <li class="sidenav-nav-item">
         <a class="sidenav-nav-link" [routerLink]="item.link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
           <mat-icon class="sidenav-link-icon">{{item.icon}}</mat-icon>
-          <span class="sidenav-link-text">{{item.lable}}</span>
+          @if (!isLeftSideCollapsed()) {
+            <span class="sidenav-link-text">{{item.lable}}</span>
+          }
+          
         </a>
       </li>
     }
