--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-left-side-bar/>
+<app-left-side-bar [isLeftSideCollapsed]="isLeftSideCollapsed()" (changeLeftSideBar)="changeLeftSideBar($event)"/>
 <app-main-body/>
